BSSN_quantities: add python module. Also update tut module. Still work to do...

--- a/Tutorial-BSSN_quantities.ipynb
+++ b/Tutorial-BSSN_quantities.ipynb
@@ -67,7 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 1.a: import all needed modules from NRPy+:\n",
+    "# Step 1.a: Import all needed modules from NRPy+:\n",
     "import NRPy_param_funcs as par\n",
     "import sympy as sp\n",
     "import indexedexp as ixp\n",
@@ -89,7 +89,12 @@
     "#           a 3+1-dimensional decomposition of the general \n",
     "#           relativistic field equations)\n",
     "DIM = 3\n",
-    "par.set_parval_from_str(\"grid::DIM\",DIM)"
+    "par.set_parval_from_str(\"grid::DIM\",DIM)\n",
+    "\n",
+    "# Step 1.e: Declare/initialize parameters for this module\n",
+    "thismodule = \"BSSN_quantities\"\n",
+    "par.initialize_param(par.glb_param(\"char\", thismodule, \"ConformalFactor\", \"W\"))\n",
+    "par.initialize_param(par.glb_param(\"bool\", thismodule, \"detgbarOverdetghat_equals_one\", \"True\"))"
    ]
   },
   {
@@ -108,10 +113,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "thismodule = \"BSSN_quantities\"\n",
-    "par.initialize_param(par.glb_param(\"char\", thismodule, \"ConformalFactor\", \"W\"))\n",
-    "par.initialize_param(par.glb_param(\"bool\", thismodule, \"detgbarOverdetghat_equals_one\", \"True\"))\n",
-    "\n",
     "# Step 2: Register all needed BSSN gridfunctions.\n",
     "# Step 2.a: Register indexed quantities, using ixp.register_... functions\n",
     "hDD = ixp.register_gridfunctions_for_single_rank2(\"EVOL\", \"hDD\", \"sym01\")\n",
@@ -484,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -734,8 +735,8 @@
     "\\Delta^{k} \\Delta_{(i j) k}  + \\bar{\\gamma}^{k l} \\left (2 \\Delta_{k(i}^{m} \\Delta_{j) m l} + \\Delta_{i k}^{m} \\Delta_{m j l} \\right).\n",
     "$$\n",
     "\n",
-    "* DGammaUDD\\[k\\]\\[i\\]\\[j\\] = $\\Delta^k_{ij}$ is simply the difference in Christoffel symbols: $\\Delta^{k}_{ij} = \\bar{\\Gamma}^i_{jk} - \\hat{\\Gamma}^i_{jk}$, and \n",
-    "* DGammaU\\[k\\] = $\\Delta^k$ is the contraction: $\\bar{\\gamma}^{ij} \\Delta^{k}_{ij}$\n",
+    "* $\\text{DGammaUDD[k][i][j]} = \\Delta^k_{ij}$ is simply the difference in Christoffel symbols: $\\Delta^{k}_{ij} = \\bar{\\Gamma}^i_{jk} - \\hat{\\Gamma}^i_{jk}$, and \n",
+    "* $\\text{DGammaU[k]} = \\Delta^k$ is the contraction: $\\bar{\\gamma}^{ij} \\Delta^{k}_{ij}$\n",
     "\n",
     "Adding these expressions to Ricci is straightforward, since $\\bar{\\Gamma}^i_{jk}$ and $\\bar{\\gamma}^{ij}$ were defined above in [Step 4](#bssn_barred_metric__inverse_and_derivs), and $\\hat{\\Gamma}^i_{jk}$ was computed within NRPy+'s reference_metric() function:"
    ]
@@ -857,9 +858,9 @@
     "\n",
     "This step, which documents the function betaUbar_and_derivs() inside the BSSN.BSSN_unrescaled_and_barred_vars module, defines three quantities:\n",
     "\n",
-    "* betaU_dD[i][j]=$\\beta^i_{,j} = \\left(\\mathcal{V}^i \\circ \\text{ReU[i]}\\right)_{,j} = \\mathcal{V}^i_{,j} \\circ \\text{ReU[i]} + \\mathcal{V}^i \\circ \\text{ReUdD[i][j]}$\n",
-    "* betaU_dupD[i][j]: the same as above, except using *upwinded* finite-difference derivatives to compute $\\mathcal{V}^i_{,j}$ instead of *centered* finite-difference derivatives.\n",
-    "* betaU_dDD[i][j][k]=$\\beta^i_{,jk} = \\mathcal{V}^i_{,jk} \\circ \\text{ReU[i]} + \\mathcal{V}^i_{,j} \\circ \\text{ReUdD[i][k]} + \\mathcal{V}^i_{,k} \\circ \\text{ReUdD[i][j]}+\\mathcal{V}^i \\circ \\text{ReUdDD[i][j][k]}$"
+    "* $\\text{betaU}\\_\\text{dD[i][j]}=\\beta^i_{,j} = \\left(\\mathcal{V}^i \\circ \\text{ReU[i]}\\right)_{,j} = \\mathcal{V}^i_{,j} \\circ \\text{ReU[i]} + \\mathcal{V}^i \\circ \\text{ReUdD[i][j]}$\n",
+    "* $\\text{betaU}\\_\\text{dupD[i][j]}$: the same as above, except using *upwinded* finite-difference derivatives to compute $\\mathcal{V}^i_{,j}$ instead of *centered* finite-difference derivatives.\n",
+    "* $\\text{betaU}\\_\\text{dDD[i][j][k]}=\\beta^i_{,jk} = \\mathcal{V}^i_{,jk} \\circ \\text{ReU[i]} + \\mathcal{V}^i_{,j} \\circ \\text{ReUdD[i][k]} + \\mathcal{V}^i_{,k} \\circ \\text{ReUdD[i][j]}+\\mathcal{V}^i \\circ \\text{ReUdDD[i][j][k]}$"
    ]
   },
   {
@@ -891,7 +892,7 @@
    "source": [
     "<a id='phi_and_derivs'></a>\n",
     "\n",
-    "# Step 9: phi_and_derivs(): Standard BSSN conformal factor $\\phi$, and its derivatives $\\phi_{,i}$, $\\phi_{,ij}$, $\\bar{D}_j \\phi_i$, and $\\bar{D}_j\\bar{D}_k \\phi_i$ \\[Back to [top](#toc)\\]\n",
+    "# Step 9: phi_and_derivs(): Standard BSSN conformal factor $\\phi$, and its derivatives $\\phi_{,i}$, $\\phi_{,ij}$, $\\bar{D}_j \\phi_i$, and $\\bar{D}_j\\bar{D}_k \\phi_i$, all written in terms of BSSN gridfunctions like $\\text{cf}$ \\[Back to [top](#toc)\\]\n",
     "$$\\label{phi_and_derivs}$$\n",
     "\n",
     "<a id='phi_ito_cf'></a>\n",
@@ -1021,7 +1022,7 @@
     "            phi_dDD[i][j] = (- cf_dDD[i][j] + cf_dD[i]*cf_dD[j] / cf) / (4*cf)\n",
     "    exp_m4phi = cf\n",
     "\n",
-    "# Step 6.a.v: Error out if unsupported ConformalFactor choice is made:\n",
+    "# Step 9.a.v: Error out if unsupported ConformalFactor choice is made:\n",
     "cf_choice = par.parval_from_str(thismodule+\"::ConformalFactor\")\n",
     "if not (cf_choice == \"phi\" or cf_choice == \"W\" or cf_choice == \"chi\"):\n",
     "    print(\"Error: ConformalFactor == \"+par.parval_from_str(thismodule+\"::ConformalFactor\")+\" unsupported!\")\n",
@@ -1052,7 +1053,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 6.b: Define phi_dBarD = phi_dD (since phi is a scalar) and phi_dBarDD (covariant derivative)\n",
+    "# Step 9.b: Define phi_dBarD = phi_dD (since phi is a scalar) and phi_dBarDD (covariant derivative)\n",
     "#          \\bar{D}_i \\bar{D}_j \\phi = \\phi_{;\\bar{i}\\bar{j}} = \\bar{D}_i \\phi_{,j}\n",
     "#                                   = \\phi_{,ij} - \\bar{\\Gamma}^k_{ij} \\phi_{,k}\n",
     "phi_dBarD = phi_dD\n",
@@ -1100,8 +1101,8 @@
     "        print(basename+\" - \"+prefixname2+basename+\" = \"+ str(expr1-expr2))\n",
     "        all_passed=False\n",
     "\n",
-    "# import BSSN.BSSN_unrescaled_and_barred_vars as Bubv\n",
-    "# Bubv.BSSN_barred_metric_derivs_and_extrinsic_curvature()\n",
+    "import BSSN.BSSN_quantities as Bq\n",
+    "Bq.\n",
     "# # Variables to check:\n",
     "# #    global gammabarDD, gammabarUU, gammabarDD_dD, gammabarDD_dupD\n",
     "# #    global GammabarUDD\n",
