BSSN tutorials: formatting fixes, mostly

--- a/Tutorial-BSSN_quantities.ipynb
+++ b/Tutorial-BSSN_quantities.ipynb
@@ -46,7 +46,7 @@
     "1. [Step 9](#phi_and_derivs): phi_and_derivs(): Standard BSSN conformal factor $\\phi$, and its derivatives $\\phi_{,i}$, $\\phi_{,ij}$, $\\bar{D}_j \\phi_i$, and $\\bar{D}_j\\bar{D}_k \\phi_i$\n",
     "    1. [Step 9.a](#phi_ito_cf): $\\phi$ in terms of the chosen (possibly non-standard) conformal factor variable $\\text{cf}$ (e.g., $\\text{cf}=W=e^{-4\\phi}$)\n",
     "    1. [Step 9.b](#phi_covariant_derivs): Partial and covariant derivatives of $\\phi$\n",
-    "1. [Step 10](#code_validation): Code Validation against BSSN.BSSN_unrescaled_and_barred_vars NRPy+ module\n",
+    "1. [Step 10](#code_validation): Code Validation against BSSN.BSSN_quantities NRPy+ module\n",
     "1. [Step 11](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF"
    ]
   },
@@ -1071,29 +1071,21 @@
    "source": [
     "<a id='code_validation'></a>\n",
     "\n",
-    "# Step 10: Code validation \\[Back to [top](#toc)\\]\n",
+    "# Step 10: Code validation against BSSN.BSSN_quantities NRPy+ module \\[Back to [top](#toc)\\]\n",
     "$$\\label{code_validation}$$\n",
     "\n",
     "As a code validation check, we verify agreement in the SymPy expressions for the RHSs of the BSSN equations between\n",
     "1. this tutorial and \n",
-    "2. the NRPy+ BSSN module.\n",
+    "2. the NRPy+ BSSN.BSSN_quantities module.\n",
     "\n",
     "By default, we analyze the RHSs in Spherical coordinates, though other coordinate systems may be chosen."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "BSSN_barred_metric_derivs_and_extrinsic_curvature() PASSED!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "all_passed=True\n",
     "def comp_func(expr1,expr2,basename,prefixname2=\"Bq.\"):\n",
@@ -1210,7 +1202,7 @@
     "    comp_func(expr_list[i],exprcheck_list[i],namecheck_list[i])\n",
     "\n",
     "if all_passed:\n",
-    "    print(\"BSSN_barred_metric_derivs_and_extrinsic_curvature() PASSED!\")"
+    "    print(\"ALL TESTS PASSED!\")"
    ]
   },
   {
@@ -1233,7 +1225,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-BSSN_quantities.ipynb to latex\n",
-      "[NbConvertApp] Writing 135341 bytes to Tutorial-BSSN_quantities.tex\n",
+      "[NbConvertApp] Writing 136278 bytes to Tutorial-BSSN_quantities.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
