new BSSN tutorials: continue work

--- a/Tutorial-BSSN_quantities.ipynb
+++ b/Tutorial-BSSN_quantities.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "This module is organized by quantity \n",
     "\n",
-    "1. [Step 1](#initializenrpy): Initialize core NRPy+ modules\n",
+    "1. [Step 1](#initializenrpy): Initialize needed NRPy+ modules\n",
     "1. [Step 2](#declare_bssn_gfs): declare_BSSN_gridfunctions_if_not_declared_already(): Declare all of the core BSSN variables $\\left\\{h_{i j},a_{i j},\\text{cf}, K, \\lambda^{i}, \\alpha, \\mathcal{V}^i, \\mathcal{B}^i\\right\\}$ and register them as gridfunctions\n",
     "1. [Step 3](#rescaling_tensors) Rescaling tensors to avoid coordinate singularities\n",
     "    1. [Step 3.a](#bssn_basic_tensors) BSSN_basic_tensors(): Define all basic conformal BSSN tensors $\\left\\{\\bar{\\gamma}_{i j},\\bar{A}_{i j},\\bar{\\Lambda}^{i}, \\beta^i, B^i\\right\\}$ in terms of BSSN gridfunctions\n",
@@ -56,7 +56,7 @@
    "source": [
     "<a id='initializenrpy'></a>\n",
     "\n",
-    "# Step 1: Initialize core NRPy+ modules \\[Back to [top](#toc)\\]\n",
+    "# Step 1: Initialize needed NRPy+ modules \\[Back to [top](#toc)\\]\n",
     "\n",
     "$$\\label{initializenrpy}$$"
    ]
@@ -1083,9 +1083,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ALL TESTS PASSED!\n"
+     ]
+    }
+   ],
    "source": [
     "all_passed=True\n",
     "def comp_func(expr1,expr2,basename,prefixname2=\"Bq.\"):\n",
@@ -1225,7 +1233,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-BSSN_quantities.ipynb to latex\n",
-      "[NbConvertApp] Writing 136278 bytes to Tutorial-BSSN_quantities.tex\n",
+      "[NbConvertApp] Writing 136093 bytes to Tutorial-BSSN_quantities.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
