BSSN tutorials: continue work

--- a/Tutorial-BSSNConstraints.ipynb
+++ b/Tutorial-BSSNConstraints.ipynb
@@ -6,11 +6,24 @@
    "source": [
     "# [BSSN](http://www2.yukawa.kyoto-u.ac.jp/~yuichiro.sekiguchi/3+1.pdf) Hamiltonian and momentum constraint equations, in ***curvilinear*** coordinates, using a covariant reference metric approach: C code generation\n",
     "\n",
-    "### Authors: Ian Ruchlin & Zach Etienne\n",
+    "<font color='red'>**All expressions generated in this module have NOT been validated against a trusted code (the original NRPy+/SENR code, which itself was validated against [Baumgarte's code](https://arxiv.org/abs/1211.6632)).**</font>\n",
     "\n",
     "## Python module containing the final expressions: [BSSN/BSSN_Constraints.py](../edit/BSSN/BSSN_Constraints.py)\n",
     "\n",
+    "### Authors: Ian Ruchlin & Zach Etienne\n",
+    "\n",
     "### ***Citations***: Generic curvilinear coordinate reference metric approach matches that of [Ruchlin, Etienne, and Baumgarte (2018)](https://arxiv.org/abs/1712.07658), which is an extension of the spherical coordinate reference metric approach of [Baumgarte, Montero, Cordero-Carrión, and Müller (2012)](https://arxiv.org/abs/1211.6632), which builds upon the covariant \"Lagrangian\" BSSN formalism of [Brown (2009)](https://arxiv.org/abs/0902.3652). *See also citations within each article.*\n",
+    "\n",
+    "<a id='toc'></a>\n",
+    "\n",
+    "# Table of Contents\n",
+    "$$\\label{toc}$$\n",
+    "\n",
+    "This module constructs the BSSN Hamiltonian and momentum constraint equations as symbolic (SymPy) expressions, in terms of the core BSSN quantities $\\left\\{h_{i j},a_{i j},\\phi, K, \\lambda^{i}, \\alpha, \\mathcal{V}^i, \\mathcal{B}^i\\right\\}$, as defined in [Ruchlin, Etienne, and Baumgarte (2018)](https://arxiv.org/abs/1712.07658) (see also [Baumgarte, Montero, Cordero-Carrión, and Müller (2012)](https://arxiv.org/abs/1211.6632) and references therein). It is organized as follows:\n",
+    "\n",
+    "1. [Step 1](#initializenrpy): Initialize needed NRPy+ modules\n",
+    "1. [Step 2](#Hamiltonianconstraint): Construct the Hamiltonian constraint $\\mathcal{H}$.\n",
+    "1. [Step 3](#momentumconstraint): Construct the momentum constraint $\\mathcal{M}^i$.\n",
     "\n",
     "We start by loading the needed modules. Notably, this module depends on several quantities defined in the [BSSN/BSSN_RHSs.py](../edit/BSSN/BSSN_RHSs.py) Python code, documented in the NRPy+ [BSSN in curvilinear coordinates module](Tutorial-BSSNCurvilinear.ipynb). Thus in Step 2 below we call BSSN_RHSs() to set these quantities."
    ]
@@ -267,6 +280,13 @@
     "print(\"H - bssncon.H = \" + str(H - bssncon.H))\n",
     "for i in range(DIM):\n",
     "    print(\"MU[\"+str(i)+\"] - bssncon.MU[\"+str(i)+\"] = \" + str(MU[i] - bssncon.MU[i]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Output this module to $\\LaTeX$-formatted PDF"
    ]
   }
  ],
