--- a/Tutorial-BSSN_time_evolution-BSSN_RHSs.ipynb
+++ b/Tutorial-BSSN_time_evolution-BSSN_RHSs.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# The BSSN Formulation of General Relativity in Generic Curvilinear Coordinates\n",
     "\n",
-    "<font color='green'>**All expressions generated in this module have been validated against a trusted code (the original NRPy+/SENR code, which itself was validated against [Baumgarte's code](https://arxiv.org/abs/1211.6632)).**</font>\n",
+    "<font color='red'>**All expressions generated in this module have NOT been validated against a trusted code (the original NRPy+/SENR code, which itself was validated against [Baumgarte's code](https://arxiv.org/abs/1211.6632)).**</font>\n",
     "\n",
     "NRPy+'s original purpose was to be an easy-to-use code capable of generating Einstein's equations in a broad class of [singular](https://en.wikipedia.org/wiki/Coordinate_singularity), curvilinear coordinate systems, where the user need only input the scale factors of the underlying reference metric. Upon generating these equations, NRPy+ would then leverage SymPy's [common-expression-elimination (CSE)](https://en.wikipedia.org/wiki/Common_subexpression_elimination) and C code generation routines, coupled to its own [single-instruction, multiple-data (SIMD)](https://en.wikipedia.org/wiki/SIMD) functions, to generate highly-optimized C code.\n",
     "\n",
@@ -35,17 +35,21 @@
     "\n",
     "<a id='toc'></a>\n",
     "\n",
-    "# Introduction, Table of Contents\n",
+    "# Table of Contents\n",
     "$$\\label{toc}$$\n",
     "\n",
     "This module documents and constructs the time evolution equations of the BSSN formulation of Einstein's equations, as defined  in [Ruchlin, Etienne, and Baumgarte (2018)](https://arxiv.org/abs/1712.07658) (see also [Baumgarte, Montero, Cordero-Carrión, and Müller (2012)](https://arxiv.org/abs/1211.6632)).\n",
     "\n",
     "The module is organized as follows\n",
     "\n",
-    "1. [Step 1](#brownslagrangebssn): Brown's covariant formulation of BSSN\n",
-    "1. [Step 2](#fullequations): Numerical implementation of BSSN time-evolution equations\n",
-    "    1. [Step 2.a](#liederivs): Expanding the Lie derivatives; the BSSN equations in their final form\n",
-    "    1. [Step 2.b](#spatialderivs): A note on the numerical implementation of spatial derivatives\n",
+    "1. [Step 1](#brownslagrangebssn): Brown's covariant formulation of BSSN (excluding the gauge conditions; see next section)\n",
+    "    1. [Step 1.a](#fullequations): Numerical implementation of BSSN time-evolution equations\n",
+    "    1. [Step 1.b](#liederivs): Expanding the Lie derivatives; the BSSN time-evolution equations in their final form\n",
+    "1. [Step 2](#gaugeconditions): Time-evolution equations for the gauge quantities $\\alpha$ and $\\beta^i$\n",
+    "1. [Step 3](#constraintequations): The BSSN constraint equations\n",
+    "    1. [Step 3.a](#hamiltonian): The Hamiltonian constraint\n",
+    "    1. [Step 3.b](#momentum): The momentum constraint\n",
+    "\n",
     "1. [Step 3](#initializenrpy): Initialize core and [BSSN_quantities](Tutorial-BSSN_quantities.ipynb) NRPy+ modules\n",
     "1. [Step 4](#gammabar): Right-hand side of $\\partial_t \\bar{\\gamma}_{ij}$\n",
     "1. [Step 5](#abar): Right-hand side of $\\partial_t \\bar{A}_{ij}$\n",
