--- a/Tutorial-BSSN_quantities.ipynb
+++ b/Tutorial-BSSN_quantities.ipynb
@@ -26,24 +26,24 @@
     "\n",
     "This module documents and constructs a number of quantities useful for building symbolic (SymPy) expressions in terms of the core BSSN quantities $\\left\\{h_{i j},a_{i j},\\phi, K, \\lambda^{i}, \\alpha, \\mathcal{V}^i, \\mathcal{B}^i\\right\\}$, as defined  in [Ruchlin, Etienne, and Baumgarte (2018)](https://arxiv.org/abs/1712.07658) (see also [Baumgarte, Montero, Cordero-Carrión, and Müller (2012)](https://arxiv.org/abs/1211.6632)).\n",
     "\n",
-    "This module is organized by quantity \n",
+    "Each family of quantities is constructed within a given function (**boldfaced** below), which reflects the organization of this module:\n",
     "\n",
     "1. [Step 1](#initializenrpy): Initialize needed NRPy+ modules\n",
-    "1. [Step 2](#declare_bssn_gfs): declare_BSSN_gridfunctions_if_not_declared_already(): Declare all of the core BSSN variables $\\left\\{h_{i j},a_{i j},\\text{cf}, K, \\lambda^{i}, \\alpha, \\mathcal{V}^i, \\mathcal{B}^i\\right\\}$ and register them as gridfunctions\n",
+    "1. [Step 2](#declare_bssn_gfs): **declare_BSSN_gridfunctions_if_not_declared_already()**: Declare all of the core BSSN variables $\\left\\{h_{i j},a_{i j},\\text{cf}, K, \\lambda^{i}, \\alpha, \\mathcal{V}^i, \\mathcal{B}^i\\right\\}$ and register them as gridfunctions\n",
     "1. [Step 3](#rescaling_tensors) Rescaling tensors to avoid coordinate singularities\n",
-    "    1. [Step 3.a](#bssn_basic_tensors) BSSN_basic_tensors(): Define all basic conformal BSSN tensors $\\left\\{\\bar{\\gamma}_{i j},\\bar{A}_{i j},\\bar{\\Lambda}^{i}, \\beta^i, B^i\\right\\}$ in terms of BSSN gridfunctions\n",
-    "1. [Step 4](#bssn_barred_metric__inverse_and_derivs): gammabar__inverse_and_derivs(): $\\bar{\\gamma}^{ij}$, and spatial derivatives of $\\bar{\\gamma}_{ij}$ including $\\bar{\\Gamma}^{i}_{jk}$\n",
+    "    1. [Step 3.a](#bssn_basic_tensors) **BSSN_basic_tensors()**: Define all basic conformal BSSN tensors $\\left\\{\\bar{\\gamma}_{i j},\\bar{A}_{i j},\\bar{\\Lambda}^{i}, \\beta^i, B^i\\right\\}$ in terms of BSSN gridfunctions\n",
+    "1. [Step 4](#bssn_barred_metric__inverse_and_derivs): **gammabar__inverse_and_derivs()**: $\\bar{\\gamma}^{ij}$, and spatial derivatives of $\\bar{\\gamma}_{ij}$ including $\\bar{\\Gamma}^{i}_{jk}$\n",
     "    1. [Step 4.a](#bssn_barred_metric__inverse): Inverse conformal 3-metric: $\\bar{\\gamma^{ij}}$\n",
     "    1. [Step 4.b](#bssn_barred_metric__derivs): Derivatives of the conformal 3-metric $\\bar{\\gamma}_{ij,k}$ and $\\bar{\\gamma}_{ij,kl}$, and associated \"barred\" Christoffel symbols $\\bar{\\Gamma}^{i}_{jk}$\n",
-    "1. [Step 5](#detgammabar_and_derivs): detgammabar_and_derivs(): $\\det \\bar{\\gamma}_{ij}$ and its derivatives\n",
-    "1. [Step 6](#abar_quantities): AbarUU_AbarUD_trAbar(): Quantities related to conformal traceless extrinsic curvature $\\bar{A}_{ij}$: $\\bar{A}^{ij}$, $\\bar{A}^i_j$, and $\\bar{A}^k_k$\n",
-    "1. [Step 7](#rbar): RicciBar__gammabarDD_dHatD__DGammaUDD__DGammaU(): The conformal (\"barred\") Ricci tensor $\\bar{R}_{ij}$ and associated quantities\n",
+    "1. [Step 5](#detgammabar_and_derivs): **detgammabar_and_derivs()**: $\\det \\bar{\\gamma}_{ij}$ and its derivatives\n",
+    "1. [Step 6](#abar_quantities): **AbarUU_AbarUD_trAbar()**: Quantities related to conformal traceless extrinsic curvature $\\bar{A}_{ij}$: $\\bar{A}^{ij}$, $\\bar{A}^i_j$, and $\\bar{A}^k_k$\n",
+    "1. [Step 7](#rbar): **RicciBar__gammabarDD_dHatD__DGammaUDD__DGammaU()**: The conformal (\"barred\") Ricci tensor $\\bar{R}_{ij}$ and associated quantities\n",
     "    1. [Step 7.a](#rbar_part1): Conformal Ricci tensor, part 1: The $\\hat{D}_{k} \\hat{D}_{l} \\bar{\\gamma}_{i j}$ term\n",
     "    1. [Step 7.b](#rbar_part2): Conformal Ricci tensor, part 2: The $\\bar{\\gamma}_{k(i} \\hat{D}_{j)} \\bar{\\Lambda}^{k}$ term\n",
     "    1. [Step 7.c](#rbar_part3): Conformal Ricci tensor, part 3: The $\\Delta^{k} \\Delta_{(i j) k}  + \\bar{\\gamma}^{k l} \\left (2 \\Delta_{k(i}^{m} \\Delta_{j) m l} + \\Delta_{i k}^{m} \\Delta_{m j l} \\right )$ terms\n",
     "    1. [Step 7.d](#summing_rbar_terms): Summing the terms and defining $\\bar{R}_{ij}$\n",
-    "1. [Step 8](#beta_derivs): betaUbar_and_derivs(): Unrescaled shift vector $\\beta^i$ and spatial derivatives $\\beta^i_{,j}$ and $\\beta^i_{,jk}$\n",
-    "1. [Step 9](#phi_and_derivs): phi_and_derivs(): Standard BSSN conformal factor $\\phi$, and its derivatives $\\phi_{,i}$, $\\phi_{,ij}$, $\\bar{D}_j \\phi_i$, and $\\bar{D}_j\\bar{D}_k \\phi_i$\n",
+    "1. [Step 8](#beta_derivs): **betaUbar_and_derivs()**: Unrescaled shift vector $\\beta^i$ and spatial derivatives $\\beta^i_{,j}$ and $\\beta^i_{,jk}$\n",
+    "1. [Step 9](#phi_and_derivs): **phi_and_derivs()**: Standard BSSN conformal factor $\\phi$, and its derivatives $\\phi_{,i}$, $\\phi_{,ij}$, $\\bar{D}_j \\phi_i$, and $\\bar{D}_j\\bar{D}_k \\phi_i$\n",
     "    1. [Step 9.a](#phi_ito_cf): $\\phi$ in terms of the chosen (possibly non-standard) conformal factor variable $\\text{cf}$ (e.g., $\\text{cf}=W=e^{-4\\phi}$)\n",
     "    1. [Step 9.b](#phi_covariant_derivs): Partial and covariant derivatives of $\\phi$\n",
     "1. [Step 10](#code_validation): Code Validation against BSSN.BSSN_quantities NRPy+ module\n",
