BSSN tutorials: mostly work on Tutorial-BSSN_time_evolution-BSSN_RHSs

--- a/Tutorial-BSSN_time_evolution-BSSN_gauge_RHSs.ipynb
+++ b/Tutorial-BSSN_time_evolution-BSSN_gauge_RHSs.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "<font color='red'>**All expressions generated in this module have NOT been validated against a trusted code (the original NRPy+/SENR code, which itself was validated against [Baumgarte's code](https://arxiv.org/abs/1211.6632)).**</font>\n",
     "\n",
-    "## Python module containing the final expressions constructed in this module: [BSSN/BSSN_RHS.py](../edit/BSSN/BSSN_gauge_RHSs.py)\n",
+    "## Python module containing the final expressions constructed here: [BSSN/BSSN_RHSs_gauge.py](../edit/BSSN/BSSN_RHSs_gauge.py)\n",
     "\n",
     "### Author: Zach Etienne\n",
     "\n",
@@ -74,11 +74,6 @@
     "# Step 1.c: Define BSSN scalars & tensors (in terms of rescaled BSSN quantities)\n",
     "import BSSN.BSSN_quantities as Bq\n",
     "Bq.BSSN_basic_tensors()\n",
-    "alpha = Bq.alpha\n",
-    "trK = Bq.trK\n",
-    "betaU = Bq.betaU\n",
-    "BU = Bq.BU\n",
-    "betU = Bq.betU\n",
     "\n",
     "# Step 1.d: Declare/initialize parameters for this module\n",
     "thismodule = \"BSSN_gauge_RHSs\"\n",
@@ -109,6 +104,11 @@
    "outputs": [],
    "source": [
     "# Step 2: \\partial_t \\alpha = \\beta^i \\alpha_{,i} - 2*\\alpha*K\n",
+    "# First import expressions from BSSN_quantities\n",
+    "alpha = Bq.alpha\n",
+    "trK = Bq.trK\n",
+    "betaU = Bq.betaU\n",
+    "# Define needed quantities\n",
     "alpha_rhs = -2*alpha*trK\n",
     "alpha_dupD = ixp.declarerank1(\"alpha_dupD\")\n",
     "for i in range(DIM):\n",
@@ -159,6 +159,10 @@
    ],
    "source": [
     "# Step 3.a: Set \\partial_t \\beta^i\n",
+    "# First import expressions from BSSN_quantities\n",
+    "BU = Bq.BU\n",
+    "betU = Bq.betU\n",
+    "# Define needed quantities\n",
     "beta_rhsU = ixp.zerorank1()\n",
     "B_rhsU = ixp.zerorank1()\n",
     "betaU_dupD = ixp.declarerank2(\"betaU_dupD\",\"nosym\")\n",
