Tutorial-BSSN_time_evolution-BSSN_RHSs: starting to debug. hDD agrees

--- a/Tutorial-BSSN_time_evolution-BSSN_RHSs.ipynb
+++ b/Tutorial-BSSN_time_evolution-BSSN_RHSs.ipynb
@@ -466,7 +466,7 @@
     "\n",
     "$$\n",
     "\\partial_{t} K = \n",
-    "{\\underbrace {\\textstyle \\left[\\beta^k \\partial_k K \\right]}_{\\text{Term 1}}} + \n",
+    "{\\underbrace {\\textstyle \\left[\\beta^i \\partial_i K \\right]}_{\\text{Term 1}}} + \n",
     "{\\underbrace {\\textstyle \\frac{1}{3} \\alpha K^{2}}_{\\text{Term 2}}} +\n",
     "{\\underbrace {\\textstyle \\alpha \\bar{A}_{i j} \\bar{A}^{i j}}_{\\text{Term 3}}}\n",
     "{\\underbrace {\\textstyle - e^{-4 \\phi} \\left (\\bar{D}_{i} \\bar{D}^{i} \\alpha + 2 \\bar{D}^{i} \\alpha \\bar{D}_{i} \\phi \\right )}_{\\text{Term 4}}}\n",
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,9 +487,9 @@
     "# TERM 2:\n",
     "trK_rhs = sp.Rational(1,3)*alpha*trK*trK\n",
     "trK_dupD = ixp.declarerank1(\"trK_dupD\")\n",
-    "for k in range(DIM):\n",
+    "for i in range(DIM):\n",
     "    # TERM 1:\n",
-    "    trK_rhs += betaU[k]*trK_dupD[k]\n",
+    "    trK_rhs += betaU[i]*trK_dupD[i]\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
     "        # TERM 4:\n",
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -798,8 +798,6 @@
     "h_rhsDD     = ixp.zerorank2()\n",
     "a_rhsDD     = ixp.zerorank2()\n",
     "lambda_rhsU = ixp.zerorank1()\n",
-    "vet_rhsU    = ixp.zerorank1()\n",
-    "bet_rhsU    = ixp.zerorank1()\n",
     "for i in range(DIM):\n",
     "    lambda_rhsU[i] = Lambdabar_rhsU[i] / rfm.ReU[i]\n",
     "    for j in range(DIM):\n",
@@ -830,29 +828,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "vvv Ignore the minor warning below. vvv\n"
-     ]
-    },
-    {
-     "ename": "ImportError",
-     "evalue": "No module named BSSN.BSSN_unrescaled_and_barred_vars",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-21-7eb76b5e8460>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"vvv Ignore the minor warning below. vvv\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mBSSN\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mBSSN_RHSs\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mbssnrhs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m \u001b[0mbssnrhs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mBSSN_RHSs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/zetienne/juppp/nrpytutorial/BSSN/BSSN_RHSs.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0moutputC\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mBSSN\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mBSSN_rescaled_vars\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mBrv\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mBSSN\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mBSSN_unrescaled_and_barred_vars\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mBubv\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;31m# Calculates the useful tensors and tensor-like quantities in the BSSN metric.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mImportError\u001b[0m: No module named BSSN.BSSN_unrescaled_and_barred_vars"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Step 9: We already have SymPy expressions for BSSN RHS expressions\n",
     "#         in terms of other SymPy variables. Even if we reset the \n",
@@ -872,30 +850,26 @@
     "# Step 9.a: Call the BSSN_RHSs() function from within the\n",
     "#           BSSN/BSSN_RHSs.py module,\n",
     "#           which should do exactly the same as in Steps 1-16 above.\n",
-    "print(\"vvv Ignore the minor warning below. vvv\")\n",
+    "print(\"vvv Ignore the minor warnings below. vvv\")\n",
     "\n",
     "import BSSN.BSSN_RHSs as bssnrhs\n",
     "bssnrhs.BSSN_RHSs()\n",
     "\n",
-    "print(\"^^^ Ignore the minor warning above. ^^^\\n\")\n",
+    "print(\"^^^ Ignore the minor warnings above. ^^^\\n\")\n",
     "\n",
     "print(\"Consistency check between BSSN_RHSs tutorial and NRPy+ module: ALL SHOULD BE ZERO.\")\n",
     "\n",
-    "print(\"alpha_rhs - bssnrhs.alpha_rhs = \" + str(alpha_rhs - bssnrhs.alpha_rhs))\n",
-    "print(\"trK_rhs - bssnrhs.trK_rhs = \" + str(trK_rhs - bssnrhs.trK_rhs))\n",
-    "print(\"cf_rhs - bssnrhs.cf_rhs = \" + str(cf_rhs - bssnrhs.cf_rhs))\n",
+    "# print(\"trK_rhs - bssnrhs.trK_rhs = \" + str(trK_rhs - bssnrhs.trK_rhs))\n",
+    "# print(\"cf_rhs - bssnrhs.cf_rhs = \" + str(cf_rhs - bssnrhs.cf_rhs))\n",
     "\n",
     "for i in range(DIM):\n",
-    "    print(\"vet_rhsU[\"+str(i)+\"] - bssnrhs.vet_rhsU[\"+str(i)+\"] = \" + str(vet_rhsU[i] - bssnrhs.vet_rhsU[i]))\n",
-    "    print(\"bet_rhsU[\"+str(i)+\"] - bssnrhs.bet_rhsU[\"+str(i)+\"] = \" + str(bet_rhsU[i] - bssnrhs.bet_rhsU[i]))\n",
-    "    print(\"lambda_rhsU[\"+str(i)+\"] - bssnrhs.lambda_rhsU[\"+str(i)+\"] = \" + \n",
-    "          str(lambda_rhsU[i] - bssnrhs.lambda_rhsU[i]))\n",
-    "    for j in range(DIM):\n",
+    "#     print(\"lambda_rhsU[\"+str(i)+\"] - bssnrhs.lambda_rhsU[\"+str(i)+\"] = \" + \n",
+    "#           str(lambda_rhsU[i] - bssnrhs.lambda_rhsU[i]))\n",
+    "     for j in range(DIM):\n",
     "        print(\"h_rhsDD[\"+str(i)+\"][\"+str(j)+\"] - bssnrhs.h_rhsDD[\"+str(i)+\"][\"+str(j)+\"] = \" \n",
     "              + str(h_rhsDD[i][j] - bssnrhs.h_rhsDD[i][j]))\n",
-    "        print(\"a_rhsDD[\"+str(i)+\"][\"+str(j)+\"] - bssnrhs.a_rhsDD[\"+str(i)+\"][\"+str(j)+\"] = \" \n",
-    "              + str(a_rhsDD[i][j] - bssnrhs.a_rhsDD[i][j]))\n",
-    "                "
+    "#         print(\"a_rhsDD[\"+str(i)+\"][\"+str(j)+\"] - bssnrhs.a_rhsDD[\"+str(i)+\"][\"+str(j)+\"] = \" \n",
+    "#               + str(a_rhsDD[i][j] - bssnrhs.a_rhsDD[i][j]))"
    ]
   },
   {
